--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-<p>你好 (^_^) ！</p>
+<p>大家好 (^_^) ！</p>
 <p>我是DJ AHAO。这是我的个人网站。</p>
-<p>二零二三年六月十一星期日，天气晴朗，29摄氏度。</p>
+<p>以下是近期活动。</p>
+<ul>
+  <li> <a https://mp.weixin.qq.com/s/0AJL2Kys-q4c2dSPawKrIg</a> </li>
+  <li> <a https://mp.weixin.qq.com/s/HzPmO1EuVcRMLn9sESikUQ</a> </li>
+</ul>
