--- a/index.html
+++ b/index.html
@@ -2,6 +2,5 @@
 <p>我是DJ AHAO。这是我的个人网站。</p>
 <p>以下是近期活动。</p>
 <ul>
-  <li> <a https://mp.weixin.qq.com/s/0AJL2Kys-q4c2dSPawKrIg</a> </li>
-  <li> <a https://mp.weixin.qq.com/s/HzPmO1EuVcRMLn9sESikUQ</a> </li>
+  <li> <a href="https://mp.weixin.qq.com/s/0AJL2Kys-q4c2dSPawKrIg"></a> </li>
 </ul>
