--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@
 <p>以下是近期活动。</p>
 <ul>
   <li> <a href="https://mp.weixin.qq.com/s/0AJL2Kys-q4c2dSPawKrIg"></a> </li>
+  <li> <a href="https://mp.weixin.qq.com/s/HzPmO1EuVcRMLn9sESikUQ"></a> </li>
 </ul>
